src/styles/App.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body{
  background-color: #7DE4DC;

}
svg{
  background-color: transparent;
}

#root{
  display: flex;
  flex-direction: column;
  align-items: center;
}
.App{
  display: flex;
  flex-direction: column;
  align-items: center;
}
.main{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

}
.dish-list{
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

/*временный фикс чтобы материал кнопки работали*/
span{background: transparent}
/**/
.dish-card{
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 375px;
  height: 414px;
  border-radius: 20px;
  background: white;
  margin-bottom: 75px;
}
.dish-buttons{
  background: transparent;
  position: absolute;
  width: 100%;
  top: 50%;
  display: flex;
  justify-content: space-between;
}
.dish-buttons svg{
  background: transparent;
}

.dish-card-img{
  width: 375px;
  height: 341px;
  border-radius: 20px 20px 0 0;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
.dish-card-info{
  height: 85px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-content: center;
  width: 100%;
  background-color: transparent;
  margin-left: 50px;

}
.dish-name{
  font-weight: 400;
  font-size: 18px;
  line-height: 23px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: transparent;
  color: #000000;
  font-family: 'Caveat Brush', cursive;
  margin-right: 10px;

}
.dish-category{
  font-weight: 200;
  font-size: 18px;
  line-height: 21px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: transparent;
  color: #000000;
  font-family: 'Roboto', sans-serif;
}

